# Learning_GL

./: .gitignore  CMakeLists.txt  README.md
assets/cordinate/: convert_and_save.ipynb  slice_3x_0.csv  slice_3x_10.csv  slice_3x_11.csv  slice_3x_12.csv  slice_3x_13.csv  slice_3x_14.csv  slice_3x_15.csv  slice_3x_16.csv  slice_3x_17.csv  slice_3x_18.csv  slice_3x_19.csv  slice_3x_20.csv  slice_3x_21.csv  slice_3x_22.csv  slice_3x_6.csv  slice_3x_7.csv  slice_3x_8.csv  slice_3x_9.csv
include/: stb_gl.h
include/cnpy/lib/: libcnpy.dylib
include/glad/: glad.h
include/learnopengl/: camera.h
shaders/: bowl.fs  bowl.vs  colors.fs  colors.vs
src/: 3.3.shader.fs  3.3.shader.vs  BowlModel.cpp  BowlModel.h  bowl_model_main.cpp  compare.cpp  glad.c  main.cpp  occupancy_main.cpp  panorama.mat  voxol_main copy.cpp  voxol_main.cpp
src/cordinate/: array.npy
